--- a/package.json
+++ b/package.json
@@ -6,25 +6,29 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "styled-components": "^6.0.8",
     "@mui/material": "^5.14.9",
+    "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^1.9.5",
-    "redux-persist": "^6.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "prop-types": "^15.8.1",
-    "modern-normalize": "^2.0.0",
     "axios": "^1.5.0",
+    "modern-normalize": "^2.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
-    "@react-icons/all-files": "^4.1.0",
+    "redux-persist": "^6.0.0",
+    "styled-components": "^6.0.8",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
