--- a/package.json
+++ b/package.json
@@ -4,27 +4,22 @@
   "private": true,
   "homepage": "https://samusdimitriy.github.io/car-sharing/",
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.9",
-    "@react-icons/all-files": "^4.1.0",
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.11.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.5.0",
     "modern-normalize": "^2.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
-    "react-redux": "^8.1.2",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
-    "redux-persist": "^6.0.0",
-    "styled-components": "^6.0.8",
+    "sass": "^1.67.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
